# time-tracking-buddy

./: Cargo.toml
src/: main.rs
traggo-graphql/: login.graphql  settings.graphql
