[package]
name = "time-tracking-buddy"
version = "0.1.0"
edition = "2021"

[dependencies]
graphql_client = "0.14.0"
serde = "1.0.203"
serde_derive = "1.0.203"
serde_json = "1.0.120"
reqwest = {version = "0.12.5", features = ["json"]}
tokio = {version = "1.38.0", features = ["full"]}
anyhow = "1.0.86"

